Create swagger.json
