# routes/index.js
@@ -1,6 +1,6 @@
 const express = require('express');
 const router = express.Router();
 
-router.use('/contacts', require('./users'));
+router.use('/users', require('./users'));
 
 module.exports = router;
