# swagger.json
@@ -1,17 +1,17 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Contacts API",
-    "description": "This is my Contacts API",
+    "title": "Fitness Tracker API",
+    "description": "This is my Fitness Tracker API",
     "version": "1.0.0"
   },
-  "host": "connect-mongodb.onrender.com",
+  "host": "fitness-tracker.onrender.com",
   "basePath": "/",
   "schemes": [
     "https"
   ],
   "paths": {
-    "/contacts/": {
+    "/users/": {
       "get": {
         "description": "",
         "produces": [
@@ -32,19 +32,16 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
+                "username": {
                   "example": "any"
                 },
                 "email": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "password": {
                   "example": "any"
                 },
-                "birthday": {
+                "profile": {
                   "example": "any"
                 }
               }
@@ -61,7 +58,7 @@
         }
       }
     },
-    "/contacts/{id}": {
+    "/users/{id}": {
       "get": {
         "description": "",
         "produces": [
@@ -99,19 +96,16 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
+                "username": {
                   "example": "any"
                 },
                 "email": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "password": {
                   "example": "any"
                 },
-                "birthday": {
+                "profile": {
                   "example": "any"
                 }
               }
